# CToy

./: .gitignore  CMakeLists.txt  CToy  LICENSE.txt  README.md  build_unix.sh  build_vs.bat
ressources/: CMakeLists.txt
ressources/include/: ctoy.h  m_color.h  m_dist.h  m_image.h  m_math.h  m_path_finding.h  m_raster.h
ressources/include/AL/: al.h
ressources/include/GLES2/: gl2.h
ressources/include/libc/: assert.h  ctype.h  dirent.h  float.h  limits.h  locale.h  math.h  memory.h  omp.h  stdint.h  stdio.h  stdlib.h  string.h  unistd.h
ressources/include/libc/sys/: stat.h
ressources/src/: main.c
ressources/src/cimgui/: cimgui.cpp  cimgui.h  cimgui.hpp
ressources/src/cimgui/imgui/: imconfig.h
ressources/src/sample/: bomber.c  hello_world.c  imgui_hello.c  libtcc_hello.c  raytracing.c  sound_hello.c  triangle_hello.c  voronoi.c
ressources/src/test/: asm.c  dirent.c  stat.c  tablet.c
ressources/src/util/: al_util.c  gl_util.c  img_util.c  imgui_ctoy.c  imgui_gles2.c  stb_image.h
ressources/tool/build_native/: CMakeLists.txt  build_mingw.bat
ressources/tool/build_native/CMake/: OutOfSourceBuild.cmake
ressources/tool/build_native/src/: CMakeLists.txt  ctoy_native.c
src/: CMakeLists.txt  ctoy.c  ctoy.h  ctoy_srgb.h  ctoy_tcc.c  easytab.h  m_color.h  m_dist.h  m_image.h  m_math.h  m_path_finding.h  m_raster.h
